# karensoppgave

./: CMakeLists.txt  main.cpp
